# emotion-conformer

./: .gitignore  README.md  pyproject.toml
config/: custom.yaml  default.yaml
hf/: upload_model.py
model/wav2vec2-conformer-base/: wav2vec2_conformer_base_librispeech.yaml
script/: finetune_wav2vec2_base.sh  finetune_wav2vec2_conformer.sh  get_hidden_states.sh  librispeech_manifest.sh  make_manifest.sh  pretrain_wav2vec2_conformer.sh
src/: analysis.ipynb  config.py  dataset.py  gen_manifest.py  gumbel.ipynb  inference.py  logger.py  make_manifest.py  model.py  test.py  train.py
