[project]
name = "emotion-conformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.17"
dependencies = [
    "fairseq==0.12.2",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "soundfile",
    "tensorboard",
    "nvitop",
    "ipykernel",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "plotly",
    "nbformat",
    "huggingface_hub[cli]"
]

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu128",
]

[tool.uv.sources]
fairseq = { path = "../fairseq", editable = true}
